- use ArrayList instead of LinkedList where possible